[tool.poetry]
name = "add_github_issue_prefix"
version = "v1.0.0"
description = "커밋할때 브랜치명에 github issue번호를 찾아서 커밋메시지 앞단에 자동으로 반영합니다."
authors = ["soungryoul.kim <soungryoul.kim@navercorp.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"


[tool.poetry.scripts]
add-github-issue-prefix = "add_github_issue_prefix.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
